Added the request endpoint to the API and now properly handling these requests.

--- a/extras/todo.txt
+++ b/extras/todo.txt
@@ -1,13 +1,12 @@
 To-do
 
 HIGH PRIORITY
-Add an endpoint to accept plant suggestions
+Wehn the server is off, on light theme, the error message does not appear. Just a blank screen, fix this asap
 Add and endpoint to accept change requests (Along with a screen for that on the plant viewer activity, probably add a button to that next to the favorite button)
 Keep working on the general plant viewer, adding more data
 
 LOW PRIORITY
 (THIS NEEDS TO WAIT UNTIL REAL EXCEPTIONS OCCUR) Handle GeminiAI exceptions when the server is under load (Common problem with Gemini API, try-catch)
-(Maybe move report a bug to the tools page?)
 
 Don't worry about code organiziation, that can be done after inital release when everything works
 (Probably a bad idea ^^^ )
